--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
             </div>
             <div class="carousel-item">
                 <img src="https://cdn.bulbagarden.net/upload/thumb/5/5f/Eterna_Gym_DPPt.png/500px-Eterna_Gym_DPPt.png" class="d-block w-100" alt="Eterna Gym">
+            </div>
         </div>
-    </div>
-    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
     </div>
 
 
@@ -103,5 +103,10 @@
 <script>// Enable Bootstrap carousel
 $('.carousel').carousel();</script>
 
-</div></div></div></body></html>
+</div>
+</div>
+</div>
+
+</body>
+</html>
     
