--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
         </div>
     </div>
 
-<script>// Enable Bootstrap carousel
-$('.carousel').carousel();</script>
+    <script>// Enable Bootstrap carousel
+        $('.carousel').carousel();
+    </script>
 
-</div>
-</div>
-</div>
+
 
 </body>
 </html>
