--- a/index.html
+++ b/index.html
@@ -58,10 +58,23 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="https://archives.bulbagarden.net/media/upload/8/8a/Eterna_Museum.png" class="d-block w-100" alt="Eterna City">
+            </div>
+            <div class="col-md-4">
+                <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c7/Eterna_City_BDSP_Concept_Art.jpg/1200px-Eterna_City_BDSP_Concept_Art.jpg" class="d-block w-100" alt="Eterna City">
+            </div>
+            <div class="col-md-4">
+                <img src="https://archives.bulbagarden.net/media/upload/1/11/Eterna_Gym_anime.png" class="d-block w-100" alt="Eterna City">
+            </div>
+        </div>
+    </div>    
     
 
                 <!-- Carousel -->
-    <div id="carousel" class="carousel slide" data-ride="carousel">
+    <!-- <div id="carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carousel" data-slide-to="0" class="active"></li>
             <li data-target="#carousel" data-slide-to="1"></li>
@@ -86,7 +99,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-    </div>
+    </div> -->
 
 
     <!-- Music section -->
