--- a/index.html
+++ b/index.html
@@ -9,68 +9,85 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Eterna City</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news.html">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pokemon.html">Pokemon</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <section id="navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="#">Eterna City</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pokemon.html">Trainers</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </section>
 
     <!-- Jumbotron -->
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Welcome to Eterna City!</h1>
-            <p class="lead">Explore the history and culture of this historic city in the heart of the Sinnoh region.</p>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#aboutModal">Learn More</button>
-            <!-- About Modal -->
-            <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="aboutModalLabel">About Eterna City</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                         <div class="modal-body">
-                            <p>Eterna City is a historic city located in the heart of the Sinnoh region. Founded over 1,000 years ago, the city is home to many ancient buildings and landmarks, including the Eterna Forest and the Eterna Gym.</p>
-                            <p>Visitors to Eterna City can explore the city's rich history and culture, visit the Eterna Gym to battle against Gym Leader Gardenia, or venture into the Eterna Forest to catch Pokemon and uncover hidden treasures.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <section id="jumbotron">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Welcome to Eterna City!</h1>
+                <p class="lead">
+                    Explore the history and culture of this historic city in the heart of the Sinnoh region.
+                </p>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#aboutModal">Learn More</button>
+                <!-- About Modal -->
+                <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="aboutModalLabel">About Eterna City</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+
+                            <div class="modal-body">
+                                <p>
+                                    Eterna City is a historic city located in the heart of the Sinnoh region. Founded over 1,000 years ago, 
+                                    the city is home to many ancient buildings and landmarks, including the Eterna Forest and the Eterna Gym.
+                                </p>
+                                <p>
+                                    Visitors to Eterna City can explore the city's rich history and culture, visit the Eterna Gym to battle against 
+                                    Gym Leader Gardenia, or venture into the Eterna Forest to catch Pokemon and uncover hidden treasures.
+                                </p>
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="https://archives.bulbagarden.net/media/upload/8/8a/Eterna_Museum.png" class="d-block w-100" alt="Eterna City">
+    <section id="buildings">
+        <div class="container-fluid" id="buildings-container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/8/8a/Eterna_Museum.png" class="d-block w-100" alt="Eterna City">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c7/Eterna_City_BDSP_Concept_Art.jpg/1200px-Eterna_City_BDSP_Concept_Art.jpg" class="d-block w-100" alt="Eterna City">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/1/11/Eterna_Gym_anime.png" class="d-block w-100" alt="Eterna City">
+                </div>
             </div>
-            <div class="col-md-4">
-                <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c7/Eterna_City_BDSP_Concept_Art.jpg/1200px-Eterna_City_BDSP_Concept_Art.jpg" class="d-block w-100" alt="Eterna City">
-            </div>
-            <div class="col-md-4">
-                <img src="https://archives.bulbagarden.net/media/upload/1/11/Eterna_Gym_anime.png" class="d-block w-100" alt="Eterna City">
-            </div>
-        </div>
-    </div>    
+        </div>    
+    </section>
     
 
                 <!-- Carousel -->
