--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Navbar -->
     <section id="navbar">
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="#">Eterna City</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,10 +31,12 @@
                 </ul>
             </div>
         </nav>
+
     </section>
 
     <!-- Jumbotron -->
     <section id="jumbotron">
+
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">Welcome to Eterna City!</h1>
@@ -65,28 +69,35 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </section>
 
+    <!-- Buildings -->
     <section id="buildings">
+
         <div class="container-fluid" id="buildings-container">
             <div class="row">
                 <div class="col-md-4">
                     <img src="https://archives.bulbagarden.net/media/upload/8/8a/Eterna_Museum.png" class="d-block w-100" alt="Eterna City">
                 </div>
+
                 <div class="col-md-4">
                     <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c7/Eterna_City_BDSP_Concept_Art.jpg/1200px-Eterna_City_BDSP_Concept_Art.jpg" class="d-block w-100" alt="Eterna City">
                 </div>
+
                 <div class="col-md-4">
                     <img src="https://archives.bulbagarden.net/media/upload/1/11/Eterna_Gym_anime.png" class="d-block w-100" alt="Eterna City">
                 </div>
+
             </div>
         </div>    
+
     </section>
     
 
@@ -119,20 +130,25 @@
     </div> -->
 
 
-    <!-- Music section -->
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/z8WSJ-_6eQ4" allowfullscreen></iframe>
+    <!-- Music  -->
+    <section id="music">
+
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/z8WSJ-_6eQ4" allowfullscreen></iframe>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </div>
 
-    <script>// Enable Bootstrap carousel
+    </section>
+
+    <!-- <script>// Enable Bootstrap carousel
         $('.carousel').carousel();
-    </script>
+    </script> -->
 
 
 
