--- a/pokemon.html
+++ b/pokemon.html
@@ -10,25 +10,99 @@
 
 <body>
      <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Eterna City</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news.html">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pokemon.html">Pokemon</a>
-                </li>
-            </ul>
+    <section id="navbar">
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="#">Eterna City</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pokemon.html">Trainers</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+    </section>
+
+    <!-- Jumbotron -->
+    <section id="jumbotron">
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container-fluid" id="jumbotron-container">
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- <img src="eternacity.jpg" class="d-block w-100"> -->
+                    </div>
+
+                    <div class="col-md-8">
+                        <h1 class="display-4">Meet Our Most Well Known Trainers!</h1>
+                            <p class="lead">
+                                Sinnoh Champion: Cynthia, and our Local Gym Leader: Gardenia
+                            </p>
+                    </div>
+
+                    <div class="col-md-2">
+                        <style="background-colour: black" />
+                    </div>
+
+                </div>
+            </div>
         </div>
-    </nav>
+
+    </section>
+
+    <!-- Cynthia -->
+    <section id="cynthia">
+
+        <div class="container-fluid" id="cynthia-container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h3>Cynthia, Sinnoh Champion</h3>
+                    <p>
+
+                    </p>
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F7574%2Fb1b9b5b504b9bb5c99c74abf89ba0acb98f214b0r1-687-791v2_hq.jpg&f=1&nofb=1&ipt=50183c4bb8a93ee195f3d1e79dc521af0e0cfddfacb6209768f12ac369c89a7f&ipo=images">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c3/Brilliant_Diamond_Shining_Pearl_Cynthia.png/472px-Brilliant_Diamond_Shining_Pearl_Cynthia.png">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Gardenia -->
+    <section id="gardenia">
+
+        <div class="container-fluid" id="gardenia-section">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/9/97/Brilliant_Diamond_Shining_Pearl_Gardenia.png/406px-Brilliant_Diamond_Shining_Pearl_Gardenia.png">
+                </div>
+
+                <div class="col-md-8">
+                    <h3>Gardenia, Eterna City Gym Leader</h3>
+                    <p>
+
+                    </p>
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F6077%2Fd3ff474c1ef53522d6af8d00ac8ade14ae05786f_hq.jpg&f=1&nofb=1&ipt=4293b45b8be8d5cc3aba88612f38ce68e92c96b643fd8dcc4530f0c8c1e3e6df&ipo=images">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
