--- a/pokemon.html
+++ b/pokemon.html
@@ -71,11 +71,11 @@
                     <p>
 
                     </p>
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F7574%2Fb1b9b5b504b9bb5c99c74abf89ba0acb98f214b0r1-687-791v2_hq.jpg&f=1&nofb=1&ipt=50183c4bb8a93ee195f3d1e79dc521af0e0cfddfacb6209768f12ac369c89a7f&ipo=images">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F7574%2Fb1b9b5b504b9bb5c99c74abf89ba0acb98f214b0r1-687-791v2_hq.jpg&f=1&nofb=1&ipt=50183c4bb8a93ee195f3d1e79dc521af0e0cfddfacb6209768f12ac369c89a7f&ipo=images" alt="cynthia team">
                 </div>
 
                 <div class="col-md-4">
-                    <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c3/Brilliant_Diamond_Shining_Pearl_Cynthia.png/472px-Brilliant_Diamond_Shining_Pearl_Cynthia.png">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c3/Brilliant_Diamond_Shining_Pearl_Cynthia.png/472px-Brilliant_Diamond_Shining_Pearl_Cynthia.png" alt="cynthia photo">
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="container-fluid" id="gardenia-section">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="https://archives.bulbagarden.net/media/upload/thumb/9/97/Brilliant_Diamond_Shining_Pearl_Gardenia.png/406px-Brilliant_Diamond_Shining_Pearl_Gardenia.png">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/9/97/Brilliant_Diamond_Shining_Pearl_Gardenia.png/406px-Brilliant_Diamond_Shining_Pearl_Gardenia.png" alt="gardenia photo">
                 </div>
 
                 <div class="col-md-8">
@@ -96,7 +96,7 @@
                     <p>
 
                     </p>
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F6077%2Fd3ff474c1ef53522d6af8d00ac8ade14ae05786f_hq.jpg&f=1&nofb=1&ipt=4293b45b8be8d5cc3aba88612f38ce68e92c96b643fd8dcc4530f0c8c1e3e6df&ipo=images">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F6077%2Fd3ff474c1ef53522d6af8d00ac8ade14ae05786f_hq.jpg&f=1&nofb=1&ipt=4293b45b8be8d5cc3aba88612f38ce68e92c96b643fd8dcc4530f0c8c1e3e6df&ipo=images" alt="gardenia team">
                 </div>
             </div>
         </div>
