--- a/pokemon.html
+++ b/pokemon.html
@@ -20,6 +20,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
@@ -35,10 +38,10 @@
     </section>
 
     <!-- Jumbotron -->
-    <section id="jumbotron">
+    <section id="trainer-jumbotron">
 
         <div class="jumbotron jumbotron-fluid">
-            <div class="container-fluid" id="jumbotron-container">
+            <div class="container-fluid" id="jumbotron-container-trainer">
                 <div class="row">
                     <div class="col-md-2">
                         <!-- <img src="eternacity.jpg" class="d-block w-100"> -->
@@ -52,7 +55,7 @@
                     </div>
 
                     <div class="col-md-2">
-                        <style="background-colour: black" />
+                        
                     </div>
 
                 </div>
@@ -67,11 +70,19 @@
         <div class="container-fluid" id="cynthia-container">
             <div class="row">
                 <div class="col-md-8">
-                    <h3>Cynthia, Sinnoh Champion</h3>
+                    <h3> <b> <i> Cynthia</i>, Sinnoh Champion </b> </h3>
                     <p>
-
+                        Cynthia is a passionate Trainer who takes Pokémon very seriously. 
+                        She is also seen to be a kind person who so deeply cares for both Pokémon and her friends 
+                        that she helps out Trainers who look up to her and gives them tips on their journeys.
                     </p>
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F7574%2Fb1b9b5b504b9bb5c99c74abf89ba0acb98f214b0r1-687-791v2_hq.jpg&f=1&nofb=1&ipt=50183c4bb8a93ee195f3d1e79dc521af0e0cfddfacb6209768f12ac369c89a7f&ipo=images" alt="cynthia team">
+
+                    <br>
+
+                    <p>
+                        Cynthia's Team:
+                    </p>
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F7574%2Fb1b9b5b504b9bb5c99c74abf89ba0acb98f214b0r1-687-791v2_hq.jpg&f=1&nofb=1&ipt=50183c4bb8a93ee195f3d1e79dc521af0e0cfddfacb6209768f12ac369c89a7f&ipo=images" alt="cynthia-team">
                 </div>
 
                 <div class="col-md-4">
@@ -92,9 +103,17 @@
                 </div>
 
                 <div class="col-md-8">
-                    <h3>Gardenia, Eterna City Gym Leader</h3>
+                    <h3> <b> <i> Gardenia</i>, Eterna City Gym Leader </b> </h3>
                     <p>
+                        Gardenia is a quirky and friendly trainer, who gets giddy whenever she comes across Grass-type Pokémon.
+                        Although she has a bubbly personality, her past may suggest she's a lot more complex than initially believed.
+                        Her connection with the Old Chateau has yet remained a mystery.
+                    </p>
 
+                    <br>
+
+                    <p>
+                        Gardenia's Team:
                     </p>
                     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F6077%2Fd3ff474c1ef53522d6af8d00ac8ade14ae05786f_hq.jpg&f=1&nofb=1&ipt=4293b45b8be8d5cc3aba88612f38ce68e92c96b643fd8dcc4530f0c8c1e3e6df&ipo=images" alt="gardenia team">
                 </div>
