--- a/index.html
+++ b/index.html
@@ -85,17 +85,28 @@
     <section id="buildings">
 
         <div class="container-fluid" id="buildings-container">
+            <h3>Our Most Popular Attractions</h3>
+
             <div class="row">
                 <div class="col-md-4">
                     <img src="https://archives.bulbagarden.net/media/upload/8/8a/Eterna_Museum.png" class="d-block w-100" alt="Eterna City">
+                    <p>
+                        The Eterna City Museum
+                    </p>
                 </div>
 
                 <div class="col-md-4">
-                    <img src="https://archives.bulbagarden.net/media/upload/thumb/c/c7/Eterna_City_BDSP_Concept_Art.jpg/1200px-Eterna_City_BDSP_Concept_Art.jpg" class="d-block w-100" alt="Eterna City">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/b/bf/Eterna_Forest_BDSP_Concept_Art.jpg/562px-Eterna_Forest_BDSP_Concept_Art.jpg" class="d-block w-100" alt="Eterna City">
+                    <p>
+                        Eterna Forest
+                    </p>
                 </div>
 
                 <div class="col-md-4">
                     <img src="https://archives.bulbagarden.net/media/upload/1/11/Eterna_Gym_anime.png" class="d-block w-100" alt="Eterna City">
+                    <p>
+                        Eterna City Gym
+                    </p>
                 </div>
 
             </div>
