--- a/news.html
+++ b/news.html
@@ -9,26 +9,199 @@
 </head>
 
 <body>
-     <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Eterna City</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news.html">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pokemon.html">Pokemon</a>
-                </li>
-            </ul>
+    <!-- Navbar -->
+    <section id="navbar">
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="index.html">Eterna City</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pokemon.html">Trainers</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+    </section>
+
+    <!-- Jumbotron -->
+    <section id="news-jumbotron">
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container-fluid" id="jumbotron-container-trainer">
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- <img src="eternacity.jpg" class="d-block w-100"> -->
+                    </div>
+
+                    <div class="col-md-8">
+                        <h1 class="display-4">What are People Saying in Eterna City?</h1>
+                            <p class="lead">
+                                Have a look and see
+                            </p>
+                    </div>
+
+                    <div class="col-md-2">
+                        
+                    </div>
+
+                </div>
+            </div>
         </div>
-    </nav>
+
+    </section>
+
+    <!-- Social  -->
+    <section id="social">
+        <div class="container-fluid" id="social-container">
+            <div class="row">
+                <div class="col-md-1">
+
+                </div>
+
+                <div class="col-md-10">
+
+                    <!-- Champion Interaction -->
+                    <div class="media">
+                        <div class="media-left">
+                            <img src="https://static.wikia.nocookie.net/pokemon/images/c/cb/DP_Cynthia.png/revision/latest?cb=20100416063733" alt="cynthiasprite" style="width:80px">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="media-heading">@ChampCynthia</h5>
+                            <p>
+                                Huge congratulations to trainer Dawn, who bested not only the Elite Four, but also, yours truly!
+                                Dawn joins a very elite group of trainers to rise up in Sinnoh and accomplish this feat. <br>
+                                Dawn will now join me in the Summer in Alola for the Battle Tree Event. 
+                            </p>
+                            <br>
+                            <div class="media">
+                                <div class="media-left">
+                                    <img src="https://archives.bulbagarden.net/media/upload/d/d6/Spr_Pt_Dawn.png" alt="dawnsprite" style="width:60px">
+                                </div>
+                                <div class="media-body">
+                                    <h6 class="media-heading">@ANewDawn</h6>
+                                        <p>
+                                            Thank you Cynthia, see you in Alola in the Summer!
+                                        </p>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="media">
+                                <div class="media-left">
+                                    <img src="https://static.wikia.nocookie.net/pokemon/images/0/0d/Leon_Galar.png/revision/latest/scale-to-width-down/700?cb=20200731134500" alt="leonsprite" style="width:60px">
+                                </div>
+                                <div class="media-body">
+                                    <h6 class="media-heading">@ChampLeon</h6>
+                                        <p>
+                                            In need of a new Champ to fill in... interesting.
+                                        </p>
+                                        <br>
+                                        <div class="media">
+                                            <div class="media-left">
+                                                <img src="https://static.wikia.nocookie.net/pokemon/images/c/cb/DP_Cynthia.png/revision/latest?cb=20100416063733" alt="cynthiasprite" style="width:60px">
+                                            </div>
+                                            <div class="media-body">
+                                                <h6 class="media-heading">@ChampCynthia</h6>
+                                                    <p>
+                                                        Was hoping to see you in Alola. Doing more work for Chairman Rose perhaps?
+                                                    </p>
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <br><br>
+                    <!-- Bug Catcher Interaction -->
+                    <div class="media">
+                        <div class="media-left">
+                            <img src="https://static.wikia.nocookie.net/capx/images/b/b9/Bugcatcherf.png/revision/latest?cb=20220107194305" alt="bugcatcher" style="width:80px">
+                        </div>
+                        <div class="media-body">
+                            <h5 class="media-heading">@BugsBugsBugs</h5>
+                                <p>
+                                    Has anyone got the chance to use honey on trees? I was hoping to get some tips!
+                                </p>
+                                <br>
+                                <div class="media">
+                                    <div class="media-left">
+                                        <img src="https://static.wikia.nocookie.net/capx/images/1/13/Bug_Maniac_Male_sprite.png/revision/latest?cb=20150209234107" alt="bugmaniac" style="width:60px">
+                                    </div>
+                                    <div class="media-body">
+                                        <h6 class="media-heading">@MetapodHarden</h6>
+                                            <p>
+                                                Yes, I have been using honey for a while now. The key is to leave it for about a day, and if you see the tree rustling, you got some Pokemon.
+                                            </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <br><br>
+                        <!-- Phoenix Wright Interaction -->
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="https://static.wikia.nocookie.net/aceattorney/images/3/37/Phoenix_Pointing_1.gif/revision/latest/scale-to-width-down/185?cb=20130329201545" alt="phoenixsprite" style="width:80px">
+                            </div>
+                            <div class="media-body">
+                                <h5 class="media-heading">@AceAttorney</h5>
+                                    <p>
+                                        Just visited the local gym while on my way to Kurain. Have to say, my allergies definitely got the best of me :( 
+                                    </p>
+                                    <br>
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="https://static.wikia.nocookie.net/pokemon/images/1/14/Gardenia%28DPP%29Sprite.png/revision/latest?cb=20081229054755" alt="gardeniasprite" style="width:60px">
+                                        </div>
+                                        <div class="media-body">
+                                            <h6 class="media-heading">@InTheNightGardenia</h6>
+                                                <p>
+                                                    That happens a lot to newcomers. Around for some hamburgers?
+                                                </p>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="https://static.wikia.nocookie.net/aceattorney/images/5/5f/AA_Franziska_von_Karma_Whip_Over_Head_1.gif/revision/latest/scale-to-width-down/185?cb=20130723213030" alt="vonkarmasprite" style="width:60px">
+                                        </div>
+                                        <div class="media-body">
+                                            <h6 class="media-heading">@FoolHunter19</h6>
+                                                <p>
+                                                    Is this seriously what you are doing right now?
+                                                </p>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-1">
+
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
