--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
         <div class="container-fluid" id="social-container">
             <div class="row">
                 <div class="col-md-1">
-
+                    <!-- EMPTY COL -->
                 </div>
 
                 <div class="col-md-10">
@@ -188,12 +188,15 @@
                                     </div>
                             </div>
                         </div>
+
+                        <br><br>
+                        <!--  -->
                     </div>
 
                 </div>
 
                 <div class="col-md-1">
-
+                    <!-- EMPTY COL -->
                 </div>
 
             </div>
