--- a/about.html
+++ b/about.html
@@ -10,25 +10,59 @@
 
 <body>
      <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Eterna City</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news.html">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pokemon.html">Pokemon</a>
-                </li>
-            </ul>
+    <section id="navbar">
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="index.html">Eterna City</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pokemon.html">Trainers</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+    </section>
+
+    <!-- Jumbotron -->
+    <section id="about-jumbotron">
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container-fluid" id="jumbotron-container-trainer">
+                <div class="row">
+                    <div class="col-md-2">
+                        <!-- <img src="eternacity.jpg" class="d-block w-100"> -->
+                    </div>
+
+                    <div class="col-md-8">
+                        <h1 class="display-4">Learn More About Our City</h1>
+                            <p class="lead">
+                                A city with deep history and culture
+                            </p>
+                    </div>
+
+                    <div class="col-md-2">
+                        
+                    </div>
+
+                </div>
+            </div>
         </div>
-    </nav>
+
+    </section>
 </body>
 
 </html>
