--- a/about.html
+++ b/about.html
@@ -63,6 +63,53 @@
         </div>
 
     </section>
+
+    <!-- History -->
+    <section id="history">
+
+        <div class="container-fluid" id="history container">
+            <h3>The Ancient Statue</h3>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <p>
+                        The creation of DIALGA,<br>
+                        The giver of time...<br>
+                        In laughter, there is tears...<br>
+                        And, likewise it is with time.<br>
+                        The same time flows on.<br>
+                        For it is the blessing of DIALGA.
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.T8nmIXX8yZjqypgHq1lpGgHaEK%26pid%3DApi&f=1&ipt=a05eb11137a2119945edb6338308e652d822721baee2c10cdae506048edfcea9&ipo=images" class="d-block w-100" alt="eternastatue">
+                </div>
+
+                <div class="col-md-4">
+                    <p>
+                        The birth of PALKIA.<br>
+                        The creator of parallel dimensions...<br>
+                        Alive, yet not alive...<br>
+                        Everything drifts in space...<br>
+                        To arrive in the same universe.<br>
+                        It is the blessing of PALKIA.
+                    </p>
+                </div>
+
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    The Eterna City Space Statue is one of the City's most popular attractions. Thanks to a local man, as well as Pokemon
+                    Trainer Dawn, the inscriptions which were written in ancient Ransei text, have now been translated.
+                    The statue itself serves as a place of worship for the God of Time: Dialga, and the God of SPace: Palkia.
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
