--- a/about.html
+++ b/about.html
@@ -100,16 +100,24 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-8">
                     The Eterna City Space Statue is one of the City's most popular attractions. Thanks to a local man, as well as Pokemon
                     Trainer Dawn, the inscriptions which were written in ancient Ransei text, have now been translated.
-                    The statue itself serves as a place of worship for the God of Time: Dialga, and the God of SPace: Palkia.
+                    The statue itself serves as a place of worship for the God of Time: Dialga, and the God of Space: Palkia. Although
+                    the legendary Pokemon have only been seen by few people, Dawn and Cynthia gave an account of the God's true appearance,
+                    which a local artist drew for us:
+                </div>
+
+                <div class="col-md-4">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.2xGKw1m0L7ZSETAKhkfYLgHaK_%26pid%3DApi&f=1&ipt=e67fa31c266b5e9f68bff727b16bfeec24b136c8a5ff129e6e4f2d6ee5d4d6f7&ipo=images" class="d-block w-100" alt="statuedrawing">
                 </div>
             </div>
 
         </div>
 
     </section>
+
+    <br>
 </body>
 
 </html>
