--- a/about.html
+++ b/about.html
@@ -118,6 +118,17 @@
     </section>
 
     <br>
+
+    <!-- Museum -->
+    <section id="museum">
+
+        <div class="container-fluid" id="museum-container">
+            <h3>Eterna City Museum</h3>
+        </div>
+
+    </section>
+
+    <br>
 </body>
 
 </html>
