--- a/about.html
+++ b/about.html
@@ -124,6 +124,20 @@
 
         <div class="container-fluid" id="museum-container">
             <h3>Eterna City Museum</h3>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/e/ed/Eterna_Space-Time_Tower.png/330px-Eterna_Space-Time_Tower.png" alt="museumnpc">
+                </div>
+
+                <div class="col-md-8">
+                    <p>
+                        Here at the museum, we pride ourselves on the restoration and maintenance of our ancient history. <br>
+                        Among the many artifacts inside the museum are a scale model of the Space-Time Towers and statues of Uxie, 
+                        Mesprit, and Azelf. Inside the entrance gates, the museum is guarded by statues of the Legendary Dialga and Palkia.
+                    </p>
+                </div>
+            </div>
         </div>
 
     </section>
