--- a/about.html
+++ b/about.html
@@ -143,6 +143,14 @@
     </section>
 
     <br>
+
+    <!-- Forest  -->
+    <section id="forest">
+
+        <div class="cntainer-fluid" id="forest-container">
+            <h3>Eterna Forest</h3>
+        </div>
+    </section>
 </body>
 
 </html>
