--- a/about.html
+++ b/about.html
@@ -149,6 +149,14 @@
 
         <div class="cntainer-fluid" id="forest-container">
             <h3>Eterna Forest</h3>
+
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
