--- a/about.html
+++ b/about.html
@@ -153,9 +153,13 @@
             <div class="row">
                 <div class="col-md-8">
                     <p>
-                        
+                        A forest enveloped in chilly air. Thick stands of trees turn the forest into a natural maze.
+                        Deep in the forest is the Old Chateau. It is falling into disrepair after being abandoned by its owner. 
+                        It lies on Route 205, separating the two portions of the route, which leads to Floaroma Town in the south and Eterna City in the east. 
                     </p>
                 </div>
+
+                
             </div>
         </div>
     </section>
