--- a/about.html
+++ b/about.html
@@ -159,10 +159,16 @@
                     </p>
                 </div>
 
-                
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/a/ae/Cheryl_Mindscape.png/300px-Cheryl_Mindscape.png" alt="forestsnap">
+                </div>
             </div>
         </div>
+
     </section>
+
+    <br>
+    
 </body>
 
 </html>
