--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
     <!-- Forest  -->
     <section id="forest">
 
-        <div class="cntainer-fluid" id="forest-container">
+        <div class="container-fluid" id="forest-container">
             <h3>Eterna Forest</h3>
 
             <div class="row">
@@ -168,7 +168,34 @@
     </section>
 
     <br>
-    
+
+    <!-- Gym  -->
+    <section id="gym">
+
+        <div class="container-fluid" id="gym-container">
+            <h3>Eterna City Gym</h3>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/b/b0/Gardenia_Cherubi_Adventures.png/300px-Gardenia_Cherubi_Adventures.png" alt="gymcherubi">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/a/a1/Eterna_Gym_field.png/375px-Eterna_Gym_field.png" alt="gymfield">
+                </div>
+
+                <div class="col-md-4">
+                    <img src="https://archives.bulbagarden.net/media/upload/thumb/6/67/Gardenia_Roserade_Adventures.png/300px-Gardenia_Roserade_Adventures.png" alt="gymroserade">
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-md-"
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
