--- a/about.html
+++ b/about.html
@@ -176,6 +176,26 @@
             <h3>Eterna City Gym</h3>
 
             <div class="row">
+                <div class="col-md-1">
+                    <!-- empty -->
+                </div>
+
+                <div class="col-md-10">
+                    <p>
+                        The Eterna Gym consists of a green foyer, past which is a greenhouse room where an indoor forest is 
+                        arranged in a maze-like pattern. The Trainers of the Gym hide and wait behind trees and natural surroundings, 
+                        and Gardenia will not accept challenges until all of her students are defeated. Every time a Trainer is defeated, 
+                        they give a hint about where another foe is. Trainers of the Gym are fond of using status-inducing moves such as 
+                        Poison Sting, Leech Seed, and Stun Spore.
+                    </p>
+                </div>
+
+                <div class="col-md-1">
+                    <!-- empty -->
+                </div>
+            </div>
+
+            <div class="row">
                 <div class="col-md-4">
                     <img src="https://archives.bulbagarden.net/media/upload/thumb/b/b0/Gardenia_Cherubi_Adventures.png/300px-Gardenia_Cherubi_Adventures.png" alt="gymcherubi">
                 </div>
@@ -189,12 +209,11 @@
                 </div>
 
             </div>
-
-            <div class="row">
-                <div class="col-md-"
-            </div>
         </div>
+
     </section>
+
+    <br>
 
 </body>
 
