--- a/about.html
+++ b/about.html
@@ -209,6 +209,28 @@
                 </div>
 
             </div>
+
+            <div class="row">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>XXX</th>
+                                <th>XXX</th>
+                                <th>XXX</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <th>XXX</th>
+                                <th>XXX</th>
+                                <th>XXX</th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
 
     </section>
