--- a/about.html
+++ b/about.html
@@ -215,17 +215,30 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>XXX</th>
-                                <th>XXX</th>
-                                <th>XXX</th>
+                                <th>Trainer</th>
+                                <th>Pokemon</th>
                             </tr>
                         </thead>
 
                         <tbody>
                             <tr>
-                                <th>XXX</th>
-                                <th>XXX</th>
-                                <th>XXX</th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/7/74/Spr_DP_Lass.png" alt="lasspic"> </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/b/bf/315MS3.png" alt="roseliatrain"> Roselia, Lv. 17 </th>
+                            </tr>
+
+                            <tr>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6f/Spr_DP_Aroma_Lady.png" alt="aromapic"> </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/3/3d/420MS3.png" alt="cherubitrain"> Cherubi, Lv. 17</th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/b/bf/315MS3.png" alt="roseliatrain"> Roselia, Lv. 18 </th>
+
+                            </tr>
+
+                            <tr>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/7/73/Spr_DP_Beauty.png" alt="beautypic"> </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 18</th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 18</th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 18</th>
+
                             </tr>
                         </tbody>
                     </table>
