--- a/about.html
+++ b/about.html
@@ -222,26 +222,25 @@
 
                         <tbody>
                             <tr>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/7/74/Spr_DP_Lass.png" alt="lasspic"> </th>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/b/bf/315MS3.png" alt="roseliatrain"> Roselia, Lv. 17 </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/7/74/Spr_DP_Lass.png" alt="lasspic"> Caroline </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/b/bf/315MS3.png" alt="roseliatrain"> Roselia, Lv. 15 </th>
                             </tr>
 
                             <tr>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6f/Spr_DP_Aroma_Lady.png" alt="aromapic"> </th>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/3/3d/420MS3.png" alt="cherubitrain"> Cherubi, Lv. 17</th>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/b/bf/315MS3.png" alt="roseliatrain"> Roselia, Lv. 18 </th>
-
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6f/Spr_DP_Aroma_Lady.png" alt="aromapic"> Angela </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/3/3d/420MS3.png" alt="cherubitrain"> Cherubi, Lv. 15</th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/b/bf/315MS3.png" alt="roseliatrain"> Roselia, Lv. 16 </th>
                             </tr>
 
                             <tr>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/7/73/Spr_DP_Beauty.png" alt="beautypic"> </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/7/73/Spr_DP_Beauty.png" alt="beautypic"> Lindsay </th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 16</th>
+                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 17</th>
                                 <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 18</th>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 18</th>
-                                <th><img src="https://archives.bulbagarden.net/media/upload/6/6c/406MS3.png" alt="budewtrain"> Budew, Lv. 18</th>
-
                             </tr>
                         </tbody>
                     </table>
+
                 </div>
             </div>
         </div>
