--- a/about.html
+++ b/about.html
@@ -210,6 +210,8 @@
 
             </div>
 
+            <br>
+
             <div class="row">
                 <div class="table-responsive">
                     <table class="table">
@@ -245,7 +247,24 @@
             </div>
 
             <div class="row">
-                <div class="col-md-"
+                <div class="col-md-4">
+                    <p>
+                        hello
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    <p>
+                        hello
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    <p>
+                        hello
+                    </p>
+                </div>
+
                 <div class="table-responsive">
                     <div class="table">
                         <thead>
